Update mail subject

--- a/JenkinsProperty/VIAX_Priceproposal.properties
+++ b/JenkinsProperty/VIAX_Priceproposal.properties
@@ -59,7 +59,7 @@ email.TOList=dchinnasam
 #Email Report CC List
 email.CCList=kcdodda,akammari,rbenny
 #Generic Subject of the email
-email.genericSubject=Automation Execution Report
+email.genericSubject=Price Proposal Automation
 # Enable - Attachment is need for email?
 email.Attachment.IsNeed=No
 # Attachment to email file directory
