--- a/JenkinsProperty/VIAX_Priceproposal.properties
+++ b/JenkinsProperty/VIAX_Priceproposal.properties
@@ -57,7 +57,7 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=kcdodda,akammari,rbenny
+email.CCList=
 #Generic Subject of the email
 email.genericSubject=Price Proposal Automation
 # Enable - Attachment is need for email?
