--- a/JenkinsProperty/VIAX_Priceproposal.properties
+++ b/JenkinsProperty/VIAX_Priceproposal.properties
@@ -61,8 +61,8 @@ email.CCList=
 #Generic Subject of the email
 email.genericSubject=Automation Execution Report
 # Enable - Attachment is need for email?
-email.Attachment.IsNeed=No
+email.Attachment.IsNeed=Yes
 # Attachment to email file directory
-email.Attachment.file.dir=
+email.Attachment.file.dir=\UploadExcel
 # Attachment to email file extension, this will take latest file with this extention from file directory
-email.Attachment.file.ext=
+email.Attachment.file.ext=xlsx
