--- a/JenkinsProperty/VIAX_Priceproposal.properties
+++ b/JenkinsProperty/VIAX_Priceproposal.properties
@@ -61,8 +61,8 @@ email.CCList=kcdodda,akammari,rbenny
 #Generic Subject of the email
 email.genericSubject=Price Proposal Automation
 # Enable - Attachment is need for email?
-email.Attachment.IsNeed=Yes
+email.Attachment.IsNeed=No
 # Attachment to email file directory
-email.Attachment.file.dir=\UploadExcel
+email.Attachment.file.dir=
 # Attachment to email file extension, this will take latest file with this extention from file directory
 email.Attachment.file.ext=xlsx
