UI Validations added5

--- a/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
+++ b/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
@@ -57,9 +57,9 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=
+email.CCList=kcdodda,akammari,rbenny
 #Generic Subject of the email
-email.genericSubject=Price Proposal Automation
+email.genericSubject=Price Proposal DBS Validation
 # Enable - Attachment is need for email?
 email.Attachment.IsNeed=Yes
 # Attachment to email file directory
