--- a/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
+++ b/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
@@ -1,5 +1,5 @@
 #Project specific configurationAutomation Application Name
-Automation.ApplicationName=SAP Test Automation
+Automation.ApplicationName=VIAX Test Automation
 # Do you need Testrail for project, if the value no/n CI will not connect testrail otherwise(blank/y/yes) only this will create run in testrail
 TestRail.RequiredToUse=yes
 #TestRail User Name. Should be able to create test runs
@@ -57,7 +57,7 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=kcdodda,akammari,rbenny,smally
+email.CCList=
 #Generic Subject of the email
 email.genericSubject=Price Proposal DBS Validation
 # Enable - Attachment is need for email?
