UI Validations added V.21

--- a/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
+++ b/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
@@ -57,7 +57,7 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=
+email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
 #Generic Subject of the email
 email.genericSubject=Price Proposal DBS Validation
 # Enable - Attachment is need for email?
