UI Validations added V.23

--- a/JenkinsProperty/VIAX_OrderCreation.properties
+++ b/JenkinsProperty/VIAX_OrderCreation.properties
@@ -1,5 +1,5 @@
 #Project specific configurationAutomation Application Name
-Automation.ApplicationName=SAP Test Automation
+Automation.ApplicationName=VIAX Order Creation
 # Do you need Testrail for project, if the value no/n CI will not connect testrail otherwise(blank/y/yes) only this will create run in testrail
 TestRail.RequiredToUse=yes
 #TestRail User Name. Should be able to create test runs
@@ -19,7 +19,7 @@ TestRail.SectionNameInSuite=
 TestRail.MilestoneName=
 #TestRail Case IDs(without C), comma separated, this is OPTIONAL, if this has value this will be used with suite id to create test run. Custom run of case ids in suite(enter with comma separate without C(prefix)),
 #Semi-Colon is added to differentiate between different TestSuiteID, check the TestSuite ID of a test case before adding here to identify before or after Semi-Colon.
-TestRail.CaseIDsInSuite=5392267,5392268,5392269
+TestRail.CaseIDsInSuite=5400141,5400142,5400143
 #Enter the test run title(if the suite is multiple, this will go as test plan title otherwise test run title
 TestRail.TestRun.Title=Robot
 # If test fail, raise defect to Jira(yes/y/no/n/blank), if value is blank or yes or y - Defect will get created for each fail cases
@@ -57,12 +57,12 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=
+email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
 #Generic Subject of the email
-email.genericSubject=Automation Execution Report
+email.genericSubject=VIAX Order Creation Automation Execution Report
 # Enable - Attachment is need for email?
-email.Attachment.IsNeed=No
+email.Attachment.IsNeed=Yes
 # Attachment to email file directory
-email.Attachment.file.dir=
+email.Attachment.file.dir=\UploadExcel
 # Attachment to email file extension, this will take latest file with this extention from file directory
-email.Attachment.file.ext=
+email.Attachment.file.ext=xlsx
