--- a/JenkinsProperty/VIAX_OrderCreation.properties
+++ b/JenkinsProperty/VIAX_OrderCreation.properties
@@ -57,7 +57,7 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=
+email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
 #Generic Subject of the email
 email.genericSubject=VIAX Order Creation Automation Execution Report
 # Enable - Attachment is need for email?
