UI Validations added V.34

--- a/JenkinsProperty/VIAX_Priceproposal.properties
+++ b/JenkinsProperty/VIAX_Priceproposal.properties
@@ -1,5 +1,5 @@
 #Project specific configurationAutomation Application Name
-Automation.ApplicationName=VIAX Price Proposal
+Automation.ApplicationName=API Price Proposal Automation
 # Do you need Testrail for project, if the value no/n CI will not connect testrail otherwise(blank/y/yes) only this will create run in testrail
 TestRail.RequiredToUse=yes
 #TestRail User Name. Should be able to create test runs
