--- a/JenkinsProperty/VIAX_WavierCase.properties
+++ b/JenkinsProperty/VIAX_WavierCase.properties
@@ -1,5 +1,5 @@
 #Project specific configurationAutomation Application Name
-Automation.ApplicationName=VIAX Price Proposal Wavier Scenarios
+Automation.ApplicationName=VIAX Wavier Scenarios Price Proposal 
 # Do you need Testrail for project, if the value no/n CI will not connect testrail otherwise(blank/y/yes) only this will create run in testrail
 TestRail.RequiredToUse=yes
 #TestRail User Name. Should be able to create test runs
@@ -57,7 +57,7 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=
+email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
 #Generic Subject of the email
 email.genericSubject=Wavier Case
 # Enable - Attachment is need for email?
