UI Validations added V.37

--- a/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
+++ b/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
@@ -63,6 +63,6 @@ email.genericSubject=Price Proposal DBS Validation
 # Enable - Attachment is need for email?
 email.Attachment.IsNeed=Yes
 # Attachment to email file directory
-email.Attachment.file.dir=\UploadExcel
+email.Attachment.file.dir=\UploadExcel\PPUIValidations
 # Attachment to email file extension, this will take latest file with this extention from file directory
 email.Attachment.file.ext=xlsx
