UI Validations added V.38

--- a/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
+++ b/JenkinsProperty/VIAX_PriceproposalUIValidation.properties
@@ -57,12 +57,12 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
+email.CCList=
 #Generic Subject of the email
 email.genericSubject=Price Proposal DBS Validation
 # Enable - Attachment is need for email?
 email.Attachment.IsNeed=Yes
 # Attachment to email file directory
-email.Attachment.file.dir=\UploadExcel\PPUIValidations
+email.Attachment.file.dir=\UploadExcel
 # Attachment to email file extension, this will take latest file with this extention from file directory
 email.Attachment.file.ext=xlsx
