UI Validations added V.48

--- a/JenkinsProperty/VIAX_OrderCreation.properties
+++ b/JenkinsProperty/VIAX_OrderCreation.properties
@@ -19,7 +19,8 @@ TestRail.SectionNameInSuite=
 TestRail.MilestoneName=
 #TestRail Case IDs(without C), comma separated, this is OPTIONAL, if this has value this will be used with suite id to create test run. Custom run of case ids in suite(enter with comma separate without C(prefix)),
 #Semi-Colon is added to differentiate between different TestSuiteID, check the TestSuite ID of a test case before adding here to identify before or after Semi-Colon.
-TestRail.CaseIDsInSuite=5400141,5400142,5400143,5400338,5400339,5400340,5400509,5400510
+TestRail.CaseIDsInSuite=5409408,5409410,5409411,5409412,5409413,5409414,5409415,5409416.5409417,5409418,5409448,5409419,5409420,5409421,5409422,5409423,5409424,5409425,5409426,5409427,5409428,5409429,5409430,5409431,5409432,5409433,5409434,5409435,5409436,5409437,5409438,5409439
+
 #Enter the test run title(if the suite is multiple, this will go as test plan title otherwise test run title
 TestRail.TestRun.Title=Robot
 # If test fail, raise defect to Jira(yes/y/no/n/blank), if value is blank or yes or y - Defect will get created for each fail cases
@@ -57,7 +58,7 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
+email.CCList=
 #Generic Subject of the email
 email.genericSubject=VIAX Order Creation Automation Execution Report
 # Enable - Attachment is need for email?
