--- a/Institutional.yml
+++ b/Institutional.yml
@@ -1,62 +1,57 @@
-Order Type
-Currency
-Authorized Amount
-Contract Start Date
-Contract End Date
-Sales Organization
-Distribution Channel
-Division
-PO type
-Sales Office
-Purchase Order Date
-Billing Date as per the Billing Plan
-Contract Number
-Sold to Party
-Sold to Partner Function
-Customer Description of Partner
-Ship To
-Ship to Partner Function
-Bill To
-Bill To Partner Function
-Payer
-Payer Partner Function
-Funding Agency
-Name 1
-Name 2
-Name 3
-Name 4
-Street
-Street Name
-Post Code/Zipcode
-City
-Country Key
-Region
-Phone
-Mobile
-Language
-email ID
-Customer Purchase Order
-Item Number
-Action Code For the Item
-Quantity
-Sale Doc Item Category
-Billing Plan
-Billing Rule
-Refernce Number
-Sales Doc Item
-Material Group 4
-Article Number
-Contract Start Date
-Contract End Date
-License Start Date
-License End Date
-PQ Deal Type
-DOI
-PDH ID
-Submission ID
-Ship To Party's PO Order
-PO date
-Condition Type
-Fixed Surcharge/discount on Total Gross
-Good Recipient
-Material Number
+{
+  "query": "mutation testFn( $data: Object) { testFunction(input: { name: \"receive-price-proposal-from-kafka\" data: { apiversion: \"1.0.1\" tenant: \"0d961334-8e06-4973-9c4a-5524ebd33f55\" id: \"51014872-8dfd-11ed-a1eb-0242ac120002\" type: \"priceproposal.requested\" source: \"urn:appcat:cmh-eeolink\" specversion: \"1.0\" subject: \"0d961334-8e06-4973-9c4a-5524ebd33f55\" time: \"2019-08-24T14:15:22Z\" datacontenttype: \"application/json\" data: $data } } ) { status data }}",
+  "variables": {
+    "data": {
+      "requestId": "e5a1358c-2f36-4d02-8c68-fe0b8c46172a",
+      "submissionId": "<<Id>>",
+      "edRefCode": "ACN3-2023-06-<<scriptId>>",
+      "articleDOI": "",
+      "journalId": "<<JournalID>>",
+      "sourceSystem": "EM",
+      "baseArticleType": "Research Article",
+      "displayArticleType": "Research Article (ABC)",
+      "submissionDate": "<<CurrentDate>>",
+      "articleAcceptedDate": "2015-09-29",
+      "editorialStatus": "TBC",
+      "articleTitle": "Seismic slip history of the Pizzalto fault (Central Apennines Italy) using in situ-produced Clcosmic ray exposure dating and rare earth element concentrations.",
+      "isManualOverrideRequired": false,
+      "manualOverrideInstructions": "string",
+      "societyCodes": [],
+      "promoCodes": [],
+      "discountCodes": [],
+      "authors": [
+        {
+          "role": "Corresponding Author",
+          "authorSequenceNumber": 1,
+          "firstName": "Jim",
+          "middleName": "M.",
+          "lastName": "TESSON",
+          "honorificPrefix": "Mr.",
+          "honorificSuffix": "",
+          "email": "TestAutomation@Wiley.com",
+          "affiliationIdType": "Ringgold",
+          "affiliations": [
+            {
+              "affiliationIds": [
+                {
+                  "institutionId": "6645",
+                  "institutionIdType": "Ringgold"
+                }
+              ],
+              "addressLocality": "Aix en Provence",
+              "countryCode": "US",
+              "country": "US",
+              "institution": "Grant Institute",
+              "department": "School of GeoSciences",
+              "stateProvince": "New Jersey",
+              "postalCode": "90210",
+              "streetAddress": [
+                "1832 Colvin Ave"
+              ]
+            }
+          ]
+        }
+      ]
+    }
+  }
+}
