--- a/JenkinsProperty/VIAX_Priceproposal.properties
+++ b/JenkinsProperty/VIAX_Priceproposal.properties
@@ -57,7 +57,8 @@ email.senderPassword=
 #Email Report To List
 email.TOList=dchinnasam
 #Email Report CC List
-email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
+email.CCList=dchinnasam
+#email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd
 #Generic Subject of the email
 email.genericSubject=Price Proposal Creation Via API Automation
 # Enable - Attachment is need for email?
