--- a/JenkinsProperty/MVP1_DealCreation.properties
+++ b/JenkinsProperty/MVP1_DealCreation.properties
@@ -59,10 +59,11 @@ email.TOList=dchinnasam
 #Email Report CC List
 email.CCList=kcdodda,akammari,smally,rbenny,pbhumiredd,jsubhash
 #Generic Subject of the email
-email.genericSubject=Wavier Case
+email.genericSubject=Deals
 # Enable - Attachment is need for email?
 email.Attachment.IsNeed=Yes
 # Attachment to email file directory
 email.Attachment.file.dir=\UploadExcel
 # Attachment to email file extension, this will take latest file with this extention from file directory
 email.Attachment.file.ext=xlsx
+
